# HtLang

./: .gitignore  AssignTest.ht  CMakeLists.txt  HTInterpreter.h  bison.output  bison.tab.c  bison.tab.h  bison.y  calc  lex.l  lex.yy.c  run.sh  test.ht
docs/: 传值-or-引用.md
ht-unit-tests/: assign_tests.ht  binaryop_tests.ht  declare_tests.ht  dict_tests.ht  for_tests.ht  func_tests.ht  if_tests.ht  nil_tests.ht  unittests.sh  while_tests.ht
src/: bison.c  bison.h  bison.output  htlang.c  htlang_ctrl.h  lex.c
src/analyzer/: bison.c  bison.h  bison.output  bison.y  gen_analyzer.sh  lex.c  lex.l
src/compiler/: HTCompiler.c  HTCompiler.h  HTExpression.c  HTExpression.h  HTFunction.c  HTFunction.h  HTInterpreter.c  HTInterpreter.h  HTStatement.c  HTStatement.h  HTVariable.c  HTVariable.h
src/executor/: HTExecutor.c  HTExecutor.h  HTExpressionEval.c  HTExpressionEval.h  HTLocalFunctionRegsiter.c  HTLocalFunctionRegsiter.h  HTLocalFunctions.c  HTRuntimeEnvironment.c  HTRuntimeEnvironment.h  HTVariableForceConvert.c  HTVariableForceConvert.h
src/interpreter/: HTExpression.h  HTInterpreter.h  HTStatement.h  HTVariable.h
src/utils/: HTDict.c  HTDict.h  HTList.c  HTList.h  HTMem.c  HTMem.h  HTString.c  HTString.h  HTType.c  HTType.h  HTTypeKit.h
test/: HTCompilerTest.c  HTDictTest.c  HTExecutorTest.c  HTExpressionEvalTest.c  HTExpressionTest.c  HTListTest.c  HTRuntimeEnvironmentTest.c  HTStatementTest.c  HTStringTest.c  HTTypeTest.c  HTVariableTest.c
